# graphite

./: .gitignore  clean_all_images.py  create_model.py  dataset.py  find_pairs.py  graphite.pt  graphite.py  latex_tags.txt  latex_tokenizer.py  main.py  pairs.json  requirements.txt  test.json  train.json  tree_utils.py  val.json
DATA/: readme.md
DATA/INKML/test/CROHME2019_test/: ISICal19_1201_em_750.inkml  ISICal19_1201_em_751.inkml  ISICal19_1201_em_752.inkml  ISICal19_1201_em_753.inkml  ISICal19_1201_em_754.inkml  ISICal19_1201_em_755.inkml  ISICal19_1201_em_756.inkml  ISICal19_1201_em_757.inkml  ISICal19_1201_em_758.inkml  ISICal19_1201_em_759.inkml  ISICal19_1201_em_760.inkml  ISICal19_1201_em_761.inkml  ISICal19_1201_em_762.inkml  ISICal19_1201_em_763.inkml  ISICal19_1201_em_764.inkml  ISICal19_1202_em_765.inkml  ISICal19_1202_em_766.inkml  ISICal19_1202_em_767.inkml  ISICal19_1202_em_768.inkml  ISICal19_1202_em_769.inkml  (+1179 more)
archived/stuff used for preprocessing/: clean_symbols_1.py  find_pairs.py  split_json.py
graphite-math/: pyproject.toml  setup.py
graphite-math/graphite/: __init__.py  create_model.py  empty.json  graphite.py  image_processor.py  latex_list.py  latex_tokenizer.py  requirements.txt  tree_utils.py  val.json
graphite-math/graphite/archived/: pairs_archive.json
graphite-math/graphite/archived/stuff used for preprocessing/: clean_all_images.py  data_variant_generator.py  inkml_to_img.py  split_lowercase_uppercase.py
graphite-math/graphite/datasets/: train.json
graphite-math/graphite_math.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+322765 files in other folders)
